[package]
name = "rusty-lang"
version = "0.1.0"
authors = ["HalidOdat <halidodat@gmail.com>"]
description = "An embedded dynamically typed programming language, heavily inspired by Rust language"
readme = "README.md"
license = "MIT"
keywords = ["interpreter", "compiler", "lexer", "parser"]
categories = ["parser-implementations"]
repository = "https://github.com/rusty-lang/rusty-lang"
homepage = "https://github.com/rusty-lang/rusty-lang"
exclude = ["../.vscode/*", "../Dockerfile", "../Makefile", "../.editorConfig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
